LPS-167156 Fix experience name truncate

--- a/modules/apps/segments/segments-web/src/main/resources/META-INF/resources/css/experience_picker.scss
+++ b/modules/apps/segments/segments-web/src/main/resources/META-INF/resources/css/experience_picker.scss
@@ -8,3 +8,7 @@ a.experience-picker-option {
 		text-decoration: none;
 	}
 }
+
+html#{$cadmin-selector} .cadmin .experience-picker-text {
+	white-space: initial;
+}
